bynkc/tests/fixtures/negative/329_par_traverse_in_pure_context/input.bynk
commons demo.parbad

fn noop(x: Int) -> Effect[()] {
  Effect.pure(())
}

fn bad(xs: List[Int]) -> Int {
  let n = xs.parTraverse((x: Int) => noop(x))
  5
}
